# urban_land_cover_end_to_end

./: .dockerignore  .gitignore  Dockerfile  app.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
Notebooks/: ulc_1.ipynb
artifacts/: rf_model.joblib
src/: __init__.py  pipeline.py  train.py  utils.py
tests/: test_app.py
urban_land_cover_end_to_end.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
