[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-land-cover-end-to-end"
version = "0.1.0"
description = "Urban land cover training and serving pipeline."
readme = { text = "Urban land cover training and serving pipeline.", content-type = "text/plain" }
requires-python = ">=3.13,<3.14"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
